# Multimodal-Emotion-recognition-from-Audio-and-Transcript-Further-Improvements

./: Multimodal_Emotion_Recognition.ipynb  README.md  pyproject.toml  ravdess_data_transcripts.json  ravdess_data_transcripts_simulated.json  requirements.txt  y_labels.npy
